[backend] データベースとapiからmemoを削除
