# backend/docs/swagger.json
@@ -99,7 +99,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/types.TaskEntity"
+                                                "$ref": "#/definitions/types.ShowTaskResponse"
                                             }
                                         }
                                     }
@@ -264,11 +264,11 @@
             "properties": {
                 "name": {
                     "type": "string",
-                    "example": "taro"
+                    "example": "admin"
                 },
                 "password": {
                     "type": "string",
-                    "example": "tarodesu"
+                    "example": "admin"
                 }
             }
         },
@@ -288,16 +288,13 @@
         "types.CreateTaskRequest": {
             "type": "object",
             "required": [
+                "deadline",
                 "title"
             ],
             "properties": {
                 "deadline": {
                     "type": "string",
-                    "example": "2024-09-20T03:12:53+09:00"
-                },
-                "memo": {
-                    "type": "string",
-                    "example": "概要"
+                    "example": "2024-09-20"
                 },
                 "title": {
                     "type": "string",
@@ -337,11 +334,11 @@
             "properties": {
                 "name": {
                     "type": "string",
-                    "example": "taro"
+                    "example": "admin"
                 },
                 "password": {
                     "type": "string",
-                    "example": "tarodesu"
+                    "example": "admin"
                 }
             }
         },
@@ -354,26 +351,17 @@
                 },
                 "expier": {
                     "type": "string",
-                    "example": "2024-09-20T03:12:53+09:00"
+                    "example": "2024-09-20"
                 },
                 "token": {
                     "type": "string"
                 }
             }
         },
-        "types.SuccessResponse": {
-            "type": "object",
-            "properties": {
-                "data": {}
-            }
-        },
-        "types.TaskEntity": {
+        "types.ShowTaskResponse": {
             "type": "object",
             "properties": {
                 "deadline": {
-                    "type": "string"
-                },
-                "memo": {
                     "type": "string"
                 },
                 "title": {
@@ -382,6 +370,12 @@
                 "waitlist_num": {
                     "type": "string"
                 }
+            }
+        },
+        "types.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {}
             }
         }
     },
